--- a/css/chat.css
+++ b/css/chat.css
@@ -1,15 +1,48 @@
 /*@import url("../libraries/normalize/normalize.css");*/
 @import url("../libraries/polyui/polyui.css");
+/*@import url("polyui.css");*/
 @import url("../libraries/alertify/themes/alertify.core.css");
 @import url("../libraries/alertify/themes/alertify.default.css");
 @import url("../libraries/font-awesome/font-awesome.css");
 @import url("../libraries/font-awesome/macset.css");
+
+/*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background: transparent;
+}
+::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+}
+::-webkit-scrollbar-thumb {
+  background: #70bcff;
+  border: 0;
+  border-radius: 0;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #70ebff;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #3da4ff;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+  border: 0;
+  border-radius: 0;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}*/
 
 body {
   margin: 0;
   font-size: 16px;
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 1.5;
+}
+a, a:hover {
+  text-decoration: none;
 }
 
 /* Contact Bar */
@@ -113,7 +146,8 @@ body {
 /* Chat History */
 .chat-container {
 /*  height: calc(100vh - 54px - 255px - 13px);*/
-  height: calc(100vh - 54px - 255px - 34px);
+  /*height: calc(100vh - 54px - 255px - 34px);*/
+  height: calc(100vh - 54px - 255px - 43px);
   /*background-color: #fff;*/
   /*background-color: #f1f4f7;*/
   background-color: #f1f7f5;
@@ -187,8 +221,8 @@ body {
 .bottom-bar > .preview {
   padding-top: 5px;
 /*  height: calc(80px - 17px);*/
-/*  height: calc(63px);*/
-  height: calc(54px);
+  height: calc(63px);
+  /*height: calc(54px);*/
   white-space: nowrap;
   overflow-y: hidden;
   overflow-x: auto;
@@ -417,6 +451,91 @@ body {
   }
 }
 
+/* Share Dialog */
+.dialog-bg {
+  z-index: 9999!important;
+}
+.socialdialog {
+  padding: 2em 2em 5.5em 2em;
+  border-radius: 0.4em;
+  background: rgb(255, 255, 255);
+  overflow: auto;
+}
+.column > div {
+  display: table;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  overflow: auto;
+  font-size: 16px;
+  background: #000;
+  background: rgba(34, 66, 108, 0.5);
+  color: #fff;
+}
+.socialdialog a:hover {
+  color: #656a6e;
+}
+.socialdialog .btn--warning:hover {
+  color: inherit;
+}
+nav {
+  display: table-cell;
+  vertical-align: middle;
+  z-index: 1;
+}
+.socialbtns {
+  padding-right: 32px;
+}
+.socialbtns a:not(.btn--warning) {
+  font-size: 3em;
+}
+.grid {
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+h1 {
+  margin: 0.67em 0;
+  font-size: 2em;
+  font-weight: 100;
+}
+.txtbox {
+  font-weight: 300;
+  padding: 15px;
+  width: 100%;
+  outline: 0;
+  font-size: 1.125em;
+  margin-bottom: 1.11111em;
+  border: 0;
+  border-bottom: 6px solid #d6d7d9;
+  border-radius: 0.4em;
+  background: #ebecec;
+  color: #000;
+}
+/*.txtbox:focus {
+  border-color: #52bab3;
+}*/
+/* Preloader dialog */
+.fixedfill {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+/* Center preloader content horizontally and vertically */
+.table {
+  display: table;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  overflow: hidden;
+}
+.cell {
+  display: table-cell;
+  vertical-align: middle;
+}
+
 /* Variables */
 .cur-defaut {
   cursor: default;
@@ -432,6 +551,9 @@ body {
 }
 .wa {
   width: auto;
+}
+.tl {
+  text-align: left;
 }
 .tc {
   text-align: center;
