--- a/css/chat.css
+++ b/css/chat.css
@@ -474,7 +474,8 @@ a, a:hover {
 }
 .search-images, .clear-search {
   float: right;
-  margin-top: -4em;
+/*  margin-top: -4em;*/
+  margin: -5em -8px 0 0;
   position: relative;
   background: none;
   border: 0;
