--- a/css/designer.css
+++ b/css/designer.css
@@ -8,7 +8,13 @@ Primary Dark: #00796B
 Accent Shade: #FFAB40
 Accent Light (Fallback): #FFD180 */
 
+/*Imports*/
+@import url("../libraries/polyui/polyui.css");
+
 /*Globals*/
+body {
+  background: #e5e5e5;
+}
 a {
   cursor: pointer;
 }
@@ -99,6 +105,82 @@ a.mdl-js-ripple-effect {
   margin-bottom: 15px;
 }
 
+/*Search*/
+.images-modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 5;
+  overflow: auto;
+  background: #000;
+  background: rgba(0, 0, 0, 0.48);
+}
+.images-modal .content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 5;
+  overflow: auto;
+  background: #fff;
+  margin: 1em;
+}
+.txtbox {
+  font-weight: 300;
+  padding: 15px;
+  width: 100%;
+  outline: 0;
+  font-size: 1.125em;
+  margin-bottom: 1.11111em;
+  border: 0;
+  border-bottom: 6px solid #d6d7d9;
+  border-radius: 0.4em;
+  background: #ebecec;
+  color: #000;
+}
+.socialbox {
+  display: inline-block;
+  width: calc(100% - 34px);
+  color: #1473c7;
+  white-space: nowrap;
+}
+.searched-images img {
+  width: 117px;
+  height: 117px;
+  margin: 0;
+}
+.search-images {
+  float: right;
+  margin: -5em -8px 0 0;
+  position: relative;
+  background: none;
+  border: 0;
+}
+.images-modal .clear-search {
+  position: absolute;
+  top: 1.2em;
+  right: 1.1em;
+  margin: 6px;
+  transform: scale(1.3);
+}
+.images-modal .content > .close-modal {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 5px;
+}
+
+/*Lesson cards*/
+.cards-container > .card.correct {
+  background: #b4fdf4;
+}
+.cards-container > .card.wrong {
+  background: #ffbaba;
+}
+
 /*misc*/
 .ib {
   display: inline-block;
@@ -106,3 +188,7 @@ a.mdl-js-ripple-effect {
 .tc {
   text-align: center;
 }
+.hide {
+  display: none;
+}
+
