--- a/css/designer.css
+++ b/css/designer.css
@@ -116,9 +116,8 @@ a.mdl-js-ripple-effect {
   background: #ffbaba;
 }
 
-/*Search & preview modal windows*/
-.images-modal,
-.preview-modal {
+/*Search/preview/donate modal windows*/
+.display-modal {
   position: absolute;
   top: 0;
   left: 0;
@@ -129,8 +128,8 @@ a.mdl-js-ripple-effect {
   background: #000;
   background: rgba(0, 0, 0, 0.48);
 }
-.images-modal .content,
-.preview-modal .content {
+.display-modal > div,
+.display-modal .content {
   position: absolute;
   top: 0;
   left: 0;
@@ -179,8 +178,7 @@ a.mdl-js-ripple-effect {
   margin: 6px;
   transform: scale(1.3);
 }
-.images-modal .content > .close-modal,
-.preview-modal .content > .close-modal {
+.display-modal .content > .close-modal {
   position: absolute;
   top: 0;
   right: 0;
@@ -192,13 +190,163 @@ a.mdl-js-ripple-effect {
   height: 100%;
   border: 0;
 }
+.save-modal > div {
+  display: table;
+  width: calc(100% - 30px);
+}
+
+.donate-modal .content {
+  width: calc(100vw - 32px);
+  background: transparent;
+  text-align: center;
+  overflow: hidden;
+}
+.donate-modal .content > .scroll {
+  width: calc(100vw - 16px);
+  height: 100%;
+  overflow-y: auto;
+}
+.donate-modal .content a img {
+  border-radius: 100%;
+  width: 100%;
+  max-width: 200px;
+}
+.donate-modal p {
+  background: #fff;
+}
+.donate-modal .donate-card {
+  display: inline-block;
+  width: calc(80vw / 2);
+  background: #fff;
+  padding: 1em 2em;
+  margin: 0;
+}
+.donate-modal .donate-card:first-child {
+  margin-right: 1em;
+}
+.donate-modal .donate-card:last-child {
+  margin-left: 1em;
+}
+.donate-modal .content > .close-modal {
+  position: absolute;
+  margin: 16px;
+  color: #e191ff;
+  transform: scale(2);
+}
+@media all and (max-width:600px) {
+  .donate-modal .content > .close-modal {
+    position: fixed;
+  }
+  .donate-modal .donate-card {
+    display: block;
+    width: auto;
+    margin: 1em;
+  }
+}
+
+/* Share Dialog */
+.socialdialog {
+  padding: 2em;
+  border-radius: 0.4em;
+  background: #fff;
+  overflow: auto;
+}
+.socialdialog a:hover {
+  color: #656a6e;
+}
+.socialdialog .btn--warning:hover {
+  color: inherit;
+}
+.preloader {
+  background: #fff;
+  background: rgba(255, 255, 255, 0.68);
+  z-index: 99999!important;
+  color: #4E92A2;
+}
+nav {
+  display: table-cell;
+  vertical-align: middle;
+  z-index: 1;
+}
+.socialbtns a:not(.btn--warning) {
+  font-size: 3em;
+}
+.grid {
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+h1 {
+  margin: 0.67em 0;
+  font-size: 2em;
+  font-weight: 100;
+}
+.txtbox {
+  font-weight: 300;
+  padding: 15px;
+  width: 100%;
+  outline: 0;
+  font-size: 1.125em;
+  margin-bottom: 1.11111em;
+  border: 0;
+  border-bottom: 6px solid #d6d7d9;
+  border-radius: 0.4em;
+  background: #ebecec;
+  color: #000;
+}
+.save-modal .btn--warning:hover {
+  color: #fff;
+}
+/*.txtbox:focus {
+  border-color: #52bab3;
+}*/
+/* Preloader dialog */
+.fixedfill {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+/* Center preloader content horizontally and vertically */
+.table {
+  display: table;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  overflow: hidden;
+}
+.cell {
+  display: table-cell;
+  vertical-align: middle;
+}
+.spin {
+  width: 30%;
+  animation: spin 1.3s infinite ease-in-out both;
+}
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+/*Lesson name title*/
+.mdl-layout__title, .mdl-layout-title {
+  transition: all linear .15s;
+}
+@media all and (max-width:600px) {
+  .mdl-layout__title, .mdl-layout-title {
+    font-size: 100%;
+  }
+}
+@media all and (max-width:500px) {
+  .mdl-layout__title, .mdl-layout-title {
+    font-size: 80%;
+  }
+}
 
 /*Preview full code while editing*/
-.lessonpage {
+.lessonpage, .fullcode {
   display: none;
 }
 .fullcode {
-  display: none;
   position: absolute;
   bottom: 0;
   right: 0;
@@ -209,6 +357,12 @@ a.mdl-js-ripple-effect {
   margin: 1em;
   resize: none;
   box-shadow: 0 0 2em rgba(0, 0, 0, 0.65);
+}
+.mdl-spinner {
+  width: 100%;
+  height: 100%;
+  max-width: 230px;
+  max-height: 230px;
 }
 
 /*misc*/
@@ -221,4 +375,3 @@ a.mdl-js-ripple-effect {
 .hide {
   display: none;
 }
-
